# hex2text

./: .gitignore  CMakeLists.txt  README.md  ai_translator.c  ai_translator.h  common.c  common.h  main.c
